common/knative/knative-serving/overlays/gateways/patches/gateway-selector-in-istio-system.yaml
apiVersion: v1
kind: Service
metadata:
  name: knative-local-gateway
  namespace: istio-system
spec:
  selector:
    app: cluster-local-gateway
    istio: cluster-local-gateway
